--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,119 @@
-archspec @ file:///croot/archspec_1709217642129/work
-attrs==23.1.0
-boltons @ file:///C:/ci_311/boltons_1677729932371/work
-Brotli @ file:///C:/b/abs_3d36mno480/croot/brotli-split_1714483178642/work
-build==0.10.0
-CacheControl==0.13.1
-certifi @ file:///C:/b/abs_1fw_exq1si/croot/certifi_1725551736618/work/certifi
-cffi @ file:///C:/b/abs_90yq4lmu83/croot/cffi_1726856448345/work
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-cleo==2.0.1
-colorama @ file:///C:/ci_311/colorama_1676422310965/work
-conda @ file:///C:/b/abs_3bs4tei4e9/croot/conda_1733841834375/work
-conda-content-trust @ file:///C:/ci_311/conda-content-trust_1676467587370/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1727775630457/work/src
-conda-package-handling @ file:///C:/b/abs_7fz3aferfv/croot/conda-package-handling_1731369038903/work
-conda_package_streaming @ file:///C:/b/abs_bdz9vbvbh2/croot/conda-package-streaming_1731366449946/work
-crashtest==0.4.1
-cryptography @ file:///C:/b/abs_b28tzldafl/croot/cryptography_1686613103834/work
-distlib==0.3.7
-distro @ file:///C:/b/abs_71xr36ua5r/croot/distro_1714488282676/work
-dulwich==0.21.6
-filelock==3.12.4
-frozendict @ file:///C:/b/abs_2alamqss6p/croot/frozendict_1713194885124/work
-idna @ file:///C:/b/abs_aad84bnnw5/croot/idna_1714398896795/work
-importlib-metadata==6.8.0
-installer==0.7.0
-jaraco.classes==3.3.0
-jsonpatch @ file:///C:/b/abs_4fdm88t7zi/croot/jsonpatch_1714483974578/work
-jsonpointer==2.1
-jsonschema==4.17.3
-keyring==24.2.0
-libmambapy @ file:///C:/b/abs_7fjjcok9fe/croot/mamba-split_1732896315069/work/libmambapy
-menuinst @ file:///C:/b/abs_cabvzz4p7a/croot/menuinst_1731364936347/work
-more-itertools==10.1.0
-msgpack==1.0.7
-packaging @ file:///C:/b/abs_c3vlh0z4jw/croot/packaging_1720101866539/work
-pexpect==4.8.0
-pkginfo==1.9.6
-platformdirs @ file:///C:/b/abs_b6z_yqw_ii/croot/platformdirs_1692205479426/work
-pluggy @ file:///C:/b/abs_dfec_m79vo/croot/pluggy_1733170145382/work
-poetry==1.6.1
-poetry-core==1.7.0
-poetry-plugin-export==1.5.0
-ptyprocess==0.7.0
-pycosat @ file:///C:/b/abs_5csdern___/croot/pycosat_1714513102923/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pyproject_hooks==1.0.0
-pyrsistent==0.19.3
-PySocks @ file:///C:/ci_311/pysocks_1676425991111/work
-pywin32-ctypes==0.2.2
-rapidfuzz==2.15.1
-requests @ file:///C:/b/abs_c3508vg8ez/croot/requests_1731000584867/work
-requests-toolbelt==1.0.0
-ruamel.yaml @ file:///C:/b/abs_0cunwx_ww6/croot/ruamel.yaml_1727980181547/work
-ruamel.yaml.clib @ file:///C:/b/abs_5fk8zi6n09/croot/ruamel.yaml.clib_1727769837359/work
-shellingham==1.5.3
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-tomlkit==0.12.1
-tqdm @ file:///C:/b/abs_77wju137gk/croot/tqdm_1724853945787/work
-trove-classifiers==2023.9.19
-truststore @ file:///C:/b/abs_55z7b3r045/croot/truststore_1695245455435/work
-urllib3 @ file:///C:/b/abs_9a_f8h_bn2/croot/urllib3_1727769836930/work
-virtualenv==20.24.5
-win-inet-pton @ file:///C:/ci_311/win_inet_pton_1676425458225/work
-zipp==3.17.0
-zstandard @ file:///C:/b/abs_31t8xmrv_h/croot/zstandard_1731356578015/work
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+anyio==4.8.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.4
+attrs==24.3.0
+autobahn==24.4.2
+babel==2.16.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+colorama==0.4.6
+comm==0.2.2
+cryptography==44.0.0
+debugpy==1.8.12
+decorator==5.1.1
+defusedxml==0.7.1
+executing==2.1.0
+fastjsonschema==2.21.1
+fqdn==1.5.1
+frozenlist==1.5.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+hyperlink==21.0.0
+idna==3.10
+ipykernel==6.29.5
+ipython==8.31.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+jedi==0.19.2
+jinja2==3.1.5
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-client==8.6.3
+jupyter-console==6.6.3
+jupyter-core==5.7.2
+jupyter-events==0.11.0
+jupyter-lsp==2.2.5
+jupyter-server==2.15.0
+jupyter-server-proxy==4.4.0
+jupyter-server-terminals==0.5.3
+jupyterlab==4.3.4
+jupyterlab-pygments==0.3.0
+jupyterlab-server==2.27.3
+jupyterlab-vpython==3.1.8
+jupyterlab-widgets==3.0.13
+llvmlite==0.44.0
+markupsafe==3.0.2
+matplotlib-inline==0.1.7
+mistune==3.1.0
+multidict==6.1.0
+nbclient==0.10.2
+nbconvert==7.16.5
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==7.3.2
+notebook-shim==0.2.4
+numba==0.61.0
+numpy==2.1.3
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+platformdirs==4.3.6
+prometheus-client==0.21.1
+prompt-toolkit==3.0.49
+propcache==0.2.1
+psutil==6.1.1
+pure-eval==0.2.3
+pycparser==2.22
+pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-json-logger==3.2.1
+pytz==2024.2
+pywin32==308
+pywinpty==2.0.14
+pyyaml==6.0.2
+pyzmq==26.2.0
+referencing==0.36.1
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.22.3
+scipy==1.15.1
+send2trash==1.8.3
+setuptools==75.8.0
+simpervisor==1.0.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+stack-data==0.6.3
+terminado==0.18.1
+tinycss2==1.4.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+txaio==23.1.1
+types-python-dateutil==2.9.0.20241206
+tzdata==2024.2
+uri-template==1.3.0
+urllib3==2.3.0
+vpython==7.6.5
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+widgetsnbextension==4.0.13
+yarl==1.18.3
